--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,30 +10,46 @@ services:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U app -d activities"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
-#  backend:
-#    build:
-#      context: ./spring-demo
-#      dockerfile: Dockerfile
-#    container_name: activities-backend
-#    depends_on:
-#      - db
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      DB_URL: jdbc:postgresql://db:5432/activities
-#      DB_USER: app
-#      DB_PASS: app
-#
-#  frontend:
-#    build:
-#      context: ./frontend
-#      dockerfile: Dockerfile
-#    container_name: activities-frontend
-#    depends_on:
-#      - backend
-#    ports:
-#      - "3000:80"
+  backend:
+    build:
+      context: ./spring-demo
+      dockerfile: Dockerfile
+    container_name: activities-be
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/activities
+      SPRING_DATASOURCE_USERNAME: app
+      SPRING_DATASOURCE_PASSWORD: app
+      SPRING_PROFILES_ACTIVE: dev
+    volumes:
+      - ./spring-demo:/app
+      - maven_cache:/root/.m2
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: activities-fe
+    depends_on:
+      - backend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
 
 volumes:
   pg_data:
+  maven_cache:
