--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,7 @@
-# ---- build
-FROM node:20-alpine AS build
+FROM node:20-alpine
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm install --silent
+COPY package.json package-lock.json ./
+RUN npm install
 COPY . .
-RUN npm run build
-
-# ---- serve
-FROM nginx:alpine
-COPY nginx.default.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
+EXPOSE 3000
+CMD ["npm","run","dev"]
